YelpCamp/v8/changes.md
# Style the campgrounds page
- Improve header and title
- Make campgrounds display in a grid
 
# Style the Navbar and the Form
- Add a navbar to all templates
- Style the new campgrounds form
 
# Add Mongoose
- Install and configure Mongoose
- Setup campgrounds model
- Use campgrounds model inside of our routes!

# Show Page
- Review RESTful routes
- Add description to the campground model
- Show db.collection.drop()
- Add a show/route template

# v5 
* Add a seeds.js file
* Run the seeds file every time the server starts
* Add the Comment model!
* Make our errors go away!
* Display comments on campground show page

# v6 added user authentication, login, register and navbar changes
- installed passport and express-session

# v7 refactor the routes
- into separate files
- 
# v8 Users + Comments
- associate user's name to comments
- save author's name to comment automatically
